# hakyll-blog-example

./: LICENSE  README.md  index.html  site.hs  user-github-io.cabal
posts/: 2015-02-23-example.markdown  2015-11-23-example.markdown
templates/: archive.html  default.html  post-list.html
